# qq-ai-bot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: advanced-capabilities-spec.md  architecture-design.md  development-guidelines.md  m1-local-runbook.md  m2-5-local-runbook.md  m2-local-runbook.md  m3-local-runbook.md  m4-local-runbook.md  m5-multimodal-evaluation.md  m6-voice-evaluation.md  product-spec.md  roadmap.md  server-deployment.md  technical-selection.md
docs/superpowers/plans/: 2026-06-12-m1-onebot-message-loop.md  2026-06-13-m2-5-search-safety-budget.md
src/qq_ai_bot/: config.py  main.py
src/qq_ai_bot/admin/: __init__.py  auth.py  commands.py
src/qq_ai_bot/budget/: __init__.py  usage.py
src/qq_ai_bot/llm/: client.py  prompt.py
src/qq_ai_bot/memory/: context.py  image_cache.py  privacy.py  summary.py
src/qq_ai_bot/onebot/: actions.py  client.py  events.py  utils.py
src/qq_ai_bot/policy/: __init__.py  image_trigger.py  rate_limit.py  (+2 more)
tests/: test_admin_auth.py  test_admin_commands.py  test_at_detection.py  test_config.py  test_daily_summary.py  test_image_cache.py  test_image_trigger.py  test_image_understanding.py  test_image_understanding_tool.py  test_llm_client.py  test_main.py  test_memory_context.py  test_memory_privacy.py  test_memory_summary.py  test_message_loop.py  test_onebot_actions.py  test_onebot_client.py  test_onebot_events.py  test_package.py  test_prompt.py  test_pyproject.py  test_rate_limit.py  test_safety_policy.py  test_sqlite_store.py  test_tool_trigger.py  test_usage_budget.py  test_web_search_tool.py
(+7 files in other folders)
