[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qq-ai-bot"
version = "0.1.0"
description = "A controlled LLM-powered QQ group bot built around OneBot."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Leezhaoji", email = "leezhaoji@example.com" }
]
dependencies = [
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
